--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
       <script src="confing.js"></script>
       <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"  rel="stylesheet" />
 </head>
-<body>
+<body class="font-bold">
     <header>
     <nav class="bg-white border-gray-200 lg:px-6 dark:bg-gray-800 p-5">
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
@@ -18,7 +18,7 @@
             </a>
             <div class="flex items-center lg:order-2">
                 <!-- <a href="#" class="text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Log in</a> -->
-                <a href="#" class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 w-28 h-11 rounded-[10px] flex justify-center">Log in</a>
+                <a href="#" class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 w-28 h-11 rounded-[10px] flex justify-center min-w-28">Log in</a>
                 <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
@@ -45,6 +45,39 @@
     </nav>
 </header>
 
+<main>
+    <section class="relative">
+      <div class="absolute left-[400px] transform -translate-x-1/2 pointer-events-none -z-1 max-h[1280px] max-w[821px]" aria-hidden="true">
+        <img src="imges/Group.svg" alt="">
+      </div>
+      <div class="max-w-6xl mx-auto px-4 sm:px-6">
+        <div class="pt-32 pb-12 md:pt-40 md:pb-20">
+          <div class="text-center pb-12 md:pb-16">
+            <h1 class="text-lg lg:text-5xl md:text-4xl font-extrabold leading-tighter tracking-tighter mb-4 aos-init aos-animate text-cyan-500 " data-aos="zoom-y-out">
+              Familiarity.. Be familiar with your facility
+               <!-- <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400">wonderful</span> -->
+            </h1>
+            <div class="max-w-3xl mx-auto">
+              <p class="text-xl text-gray-600 mb-8 aos-init aos-animate lg:text-3xl" data-aos="zoom-y-out" data-aos-delay="150" style="font-family: sans-serif;">
+                A technical system that analyzes facility data in  <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400 lg:text-4xl">government agencies</span>  and provides instructions and directives in an automated manner to make the facility better than it is
+              </p>
+              <div class="inline-grid justify-items-center">
+                <h1 class="mb-8">You can now know the status of your facility</h1>
+                <a href="#" class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800  h-11 rounded-[10px] flex justify-center m-8 ">Create reports</a>
+              </div>
+                <div class="text-base">
+                  <a class="pr-8 pt-1.5" style="
+    border-right: groove;">Subscription for one report</a>
+                  <a class=" pl-8">Unlimited annual subscription</a>
+                </div>
+            </div>
+          </div>
+          <div class="w-[1192px] h-[730px] bg-gray-600 absolute z-0">
+            <img class="" src="" alt="">
+          </div>
+    </section>
+
+</main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
 </body>
 </html>
