--- a/main.html
+++ b/main.html
@@ -28,16 +28,16 @@
             <div class="justify-between items-center lg:flex lg:order-1 lg:p-3  hidden w-3/5" id="mobile-menu-2" >
                 <ul class=" flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0 w-full justify-between lg:w-[86%] lg:gap-[110px] lg:m-auto">
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700" aria-current="page">Home</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max" aria-current="page">Home</a>
                     </li>
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">About Elmam</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max">About Elmam</a>
                     </li>
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">User Guide</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max">User Guide</a>
                     </li>
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Dashboard</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max">Dashboard</a>
                     </li>
                 </ul>
             </div>
