--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
       <script src="confing.js"></script>
       <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"  rel="stylesheet" />
 </head>
-<body class="font-bold">
+<body class="font-normal	">
     <header>
     <nav class="bg-white border-gray-200 lg:px-6 dark:bg-gray-800 p-5">
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
@@ -58,17 +58,16 @@
                <!-- <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400">wonderful</span> -->
             </h1>
             <div class="max-w-3xl mx-auto">
-              <p class="text-xl text-gray-600 mb-8 aos-init aos-animate lg:text-3xl" data-aos="zoom-y-out" data-aos-delay="150" style="font-family: sans-serif;">
+              <p class="text-xl text-gray-600 mb-8 aos-init aos-animate lg:text-3xl font-bold" data-aos="zoom-y-out" data-aos-delay="150" style="font-family: sans-serif;">
                 A technical system that analyzes facility data in  <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400 lg:text-4xl">government agencies</span>  and provides instructions and directives in an automated manner to make the facility better than it is
               </p>
               <div class="inline-grid justify-items-center">
-                <h1 class="mb-8">You can now know the status of your facility</h1>
-                <a href="#" class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800  h-11 rounded-[10px] flex justify-center m-8 ">Create reports</a>
+                <h1 class="mb-8 text-zinc-500">You can now know the status of your facility</h1>
+                <a href="#" class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800  h-11 rounded-[10px] flex justify-center m-8 font-bold">Create reports</a>
               </div>
                 <div class="text-base">
-                  <a class="pr-8 pt-1.5" style="
-    border-right: groove;">Subscription for one report</a>
-                  <a class=" pl-8">Unlimited annual subscription</a>
+                  <a class="pr-8 pt-1.5 text-zinc-500" style="border-right: groove;">Subscription for one report</a>
+                  <a class=" pl-8 text-cyan-500">Unlimited annual subscription</a>
                 </div>
             </div>
           </div>
