add about section

--- a/main.html
+++ b/main.html
@@ -71,9 +71,31 @@
                 </div>
             </div>
           </div>
-          <div class="w-[1192px] h-[730px] bg-gray-600 absolute z-0">
+          <div class="w-[1192px] h-[730px] bg-gray-600 relative z-0">
             <img class="" src="" alt="">
           </div>
+    </section>
+    <section class="mt-48	">
+      <div class="mb-16">
+        <h2 class="flex justify-center text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">About Elmam</h2>
+        <h3 class="flex justify-center text-2xl	font-bold">Definition of vision and goals</h3>
+      </div>
+      <div class="flex justify-center gap-40">
+        <div class="lg:w-[548px] lg:h-80 rounded-xl" style="box-shadow: 0px 67.114px 109.061px 0px rgba(0, 0, 0, 0.05);">
+          <div class="flex justify-center mb-8">
+            <img src="imges/eye.svg" alt="" class="mr-8">
+            <h4 class="mt-auto mb-auto font-bold text-3xl">Vision</h4>
+          </div>
+          <p class="text-lg	text-slate-500 px-10 leading-[44px]">Elmam aspires to be the technical partner for establishments in the Kingdom by providing the best advice and guidance on government operations to establishments in a fully automated manner, which helps them make the best decisions and move towards success.</p>
+        </div>
+        <div class="lg:w-[548px] lg:h-80 rounded-xl" style="box-shadow: 0px 67.114px 109.061px 0px rgba(0, 0, 0, 0.05);">
+          <div class="flex justify-center mb-8">
+            <img src="imges/mission.svg" alt="" class="mr-8">
+            <h4 class="mt-auto mb-auto font-bold text-3xl">the goal</h4>
+          </div>
+          <p class="text-lg	text-slate-500 px-10 leading-[44px]">Elmam aims to help establishments and their employees in the field of government operations and human resources discover errors and observations in government operations, resolve them, and enable officials to make sound decisions to make the establishment.</p>
+        </div>
+      </div>
     </section>
 
 </main>
