add risks section

--- a/main.html
+++ b/main.html
@@ -97,6 +97,45 @@
         </div>
       </div>
     </section>
+    <section>
+      <div>
+        <div>
+          <h2>The importance of the imam</h2>
+          <h3>Some of the risks you can avoid by using Elmam</h3>
+        </div>
+        <div>
+          <div>
+            <div>
+              <img src="" alt="">
+              <h4>Financial risks</h4>
+            </div> 
+            <p>- Avoid financial waste due to lack of knowledge of some government procedures
+              - Avoid violations that occur as a result of the large number of government operations and their interconnectedness</p>           
+          </div>
+          <div>
+            <div>
+              <img src="" alt="">
+              <h4>Systemic risk</h4>
+            </div> 
+            <p>- Avoid problems resulting from fake localization
+              - Avoid not benefiting from government support for the facility</p>           
+          </div>
+          <div>
+            <div>
+              <img src="" alt="">
+              <h4>Management risks</h4>
+            </div> 
+            <p>- Avoid the inability of those responsible for government operations to lead the facility
+              - Avoid the lack of a clear vision for executive management to make sound decisions</p>           
+          </div>
+        </div>
+      </div>
+      <div>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
+    </section>
 
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
