finish risks section

--- a/main.html
+++ b/main.html
@@ -97,36 +97,50 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="mt-60">
       <div>
-        <div>
-          <h2>The importance of the imam</h2>
-          <h3>Some of the risks you can avoid by using Elmam</h3>
+        <div class="mb-16">
+          <h2 class="flex justify-center text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">The importance of the imam</h2>
+          <h3 class="flex justify-center text-2xl	font-bold">Some of the risks you can avoid by using Elmam</h3>
         </div>
-        <div>
-          <div>
-            <div>
-              <img src="" alt="">
-              <h4>Financial risks</h4>
+        <div class="flex justify-center gap-20 mx-20">
+          <div class="w-[442px] border-2 border-slate-200 px-10 py-7 rounded-xl	">
+            <div class="flex justify-start mb-8">
+              <img src="imges/money-4.svg" alt="" class="mr-8">
+              <h4 class="mt-auto mb-auto font-bold text-3xl">Financial risks</h4>
             </div> 
-            <p>- Avoid financial waste due to lack of knowledge of some government procedures
-              - Avoid violations that occur as a result of the large number of government operations and their interconnectedness</p>           
+            <p class="text-lg	text-slate-500 px-10">
+- Avoid financial waste due to lack of knowledge 
+  of some government procedures
+  <br>
+- Avoid violations that occur as a result of the 
+  large number of government operations and their 
+  interconnectedness</p>           
           </div>
-          <div>
-            <div>
-              <img src="" alt="">
-              <h4>Systemic risk</h4>
+          <div class="w-[442px] border-2 border-slate-200 px-10 py-7 rounded-xl	">
+            <div class="flex justify-start mb-8">
+              <img src="imges/phone.svg" alt="" class="mr-8">
+              <h4 class="mt-auto mb-auto font-bold text-3xl">Systemic risk</h4>
             </div> 
-            <p>- Avoid problems resulting from fake localization
-              - Avoid not benefiting from government support for the facility</p>           
+            <p class="text-lg	text-slate-500 px-10">
+- Avoid problems resulting from fake localization
+<br>
+- Avoid not benefiting from government support 
+  for the facility</p>           
           </div>
-          <div>
-            <div>
-              <img src="" alt="">
-              <h4>Management risks</h4>
+          <div class="w-[442px] border-2 border-slate-200 px-10 py-7 rounded-xl	">
+            <div class="flex justify-start mb-8">
+              <img src="imges/computer.svg" alt="" class="mr-8">
+              <h4 class="mt-auto mb-auto font-bold text-3xl">Management risks</h4>
             </div> 
-            <p>- Avoid the inability of those responsible for government operations to lead the facility
-              - Avoid the lack of a clear vision for executive management to make sound decisions</p>           
+            <p class="text-lg	text-slate-500 px-10">
+- Avoid the inability of those responsible
+  for government operations to lead 
+  the facility
+  <br>
+- Avoid the lack of a clear vision for 
+  executive management to make 
+  sound decisions</p>           
           </div>
         </div>
       </div>
