--- a/main.html
+++ b/main.html
@@ -145,9 +145,13 @@
         </div>
       </div>
       <div>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="imges/Group.svg" alt="">
+        <img src="imges/dashboard.svg" alt="">
+        <img src="imges/reports.svg" alt="">
+      </div>
+      <div>
+        <h5></h5>
+        <button></button>
       </div>
     </section>
 
