--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
             </a>
             <div class="flex items-center lg:order-2">
                 <!-- <a href="#" class="text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Log in</a> -->
-                <a href="#" class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 w-28 h-11 rounded-[10px] flex justify-center min-w-28">Log in</a>
+                <a href="#" class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 w-28 h-11 rounded-[10px] flex justify-center min-w-28 lg:w-max">تسجيل الدخول</a>
                 <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
@@ -28,16 +28,16 @@
             <div class="justify-between items-center lg:flex lg:order-1 lg:p-3  hidden w-3/5" id="mobile-menu-2" >
                 <ul class=" flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0 w-full justify-between lg:w-[86%] lg:gap-[110px] lg:m-auto">
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max" aria-current="page">Home</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max" aria-current="page">الرئيسية</a>
                     </li>
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max">About Elmam</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max">عن إلمام</a>
                     </li>
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max">User Guide</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max">دليل الإستخدام</a>
                     </li>
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max">Dashboard</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black border-b border-gray-100 hover:bg-cyan-500 lg:hover:bg-transparent lg:border-0 lg:hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max">لوحة التحكم</a>
                     </li>
                 </ul>
             </div>
@@ -47,27 +47,27 @@
 
 <main>
     <section class="relative">
-      <div class="absolute left-[400px] transform -translate-x-1/2 pointer-events-none -z-1 max-h[1280px] max-w[821px]" aria-hidden="true">
+      <div class="absolute left-[420px] transform -translate-x-1/2 pointer-events-none -z-1 max-h[1280px] max-w[821px]" aria-hidden="true">
         <img src="imges/Group.svg" alt="">
       </div>
       <div class="max-w-6xl mx-auto px-4 sm:px-6">
         <div class="pt-32 pb-12 md:pt-40 md:pb-20">
           <div class="text-center pb-12 md:pb-16">
-            <h1 class="text-lg lg:text-5xl md:text-4xl font-extrabold leading-tighter tracking-tighter mb-4 aos-init aos-animate text-cyan-500 " data-aos="zoom-y-out">
-              Familiarity.. Be familiar with your facility
+            <h1 class="text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-4 aos-init aos-animate text-cyan-500 " data-aos="zoom-y-out">
+              إلمام .. كُن مُلماً بمنشأتك
                <!-- <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400">wonderful</span> -->
             </h1>
             <div class="max-w-3xl mx-auto">
               <p class="text-xl text-gray-600 mb-8 aos-init aos-animate lg:text-3xl font-bold" data-aos="zoom-y-out" data-aos-delay="150" style="font-family: sans-serif;">
-                A technical system that analyzes facility data in  <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400 lg:text-4xl">government agencies</span>  and provides instructions and directives in an automated manner to make the facility better than it is
+                نظام تقني يعمل على تحليل بيانات المنشأة في  <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400 lg:text-4xl">الجهات الحكومية</span>  وتقديم الإرشادات والتوجيهات بشكل مؤتمت لجعل المنشأة بأفضل مما هي عليه
               </p>
               <div class="inline-grid justify-items-center">
-                <h1 class="mb-8 text-zinc-500">You can now know the status of your facility</h1>
-                <a href="#" class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800  h-11 rounded-[10px] flex justify-center m-8 font-bold">Create reports</a>
+                <h1 class="mb-8 text-zinc-500">يمكنك الأن معرفة حالة منشأتك</h1>
+                <a href="#" class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800  h-11 rounded-[10px] flex justify-center m-8 font-bold">انشاء تقارير</a>
               </div>
                 <div class="text-base">
-                  <a class="pr-8 pt-1.5 text-zinc-500" style="border-right: groove;">Subscription for one report</a>
-                  <a class=" pl-8 text-cyan-500">Unlimited annual subscription</a>
+                  <a class="pl-8 pt-1.5 text-cyan-500" style="border-left: groove;">اشتراك لتقرير واحد</a>
+                  <a class=" pr-8 text-zinc-500">اشتراك سنوي لا محدود</a>
                 </div>
             </div>
           </div>
@@ -77,70 +77,62 @@
     </section>
     <section class="mt-48	">
       <div class="mb-16">
-        <h2 class="flex justify-center text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">About Elmam</h2>
-        <h3 class="flex justify-center text-2xl	font-bold">Definition of vision and goals</h3>
+        <h2 class="flex justify-center text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">عن إلمام</h2>
+        <h3 class="flex justify-center text-2xl	font-bold">تعريف عن الرؤية والاهداف</h3>
       </div>
       <div class="flex justify-center gap-40">
         <div class="lg:w-[548px] lg:h-80 rounded-xl" style="box-shadow: 0px 67.114px 109.061px 0px rgba(0, 0, 0, 0.05);">
           <div class="flex justify-center mb-8">
-            <img src="imges/eye.svg" alt="" class="mr-8">
-            <h4 class="mt-auto mb-auto font-bold text-3xl">Vision</h4>
+            <img src="imges/eye.svg" alt="" class="ltr:mr-8 rtl:ml-8">
+            <h4 class="mt-auto mb-auto font-bold text-3xl">الرؤية</h4>
           </div>
-          <p class="text-lg	text-slate-500 px-10 leading-[44px]">Elmam aspires to be the technical partner for establishments in the Kingdom by providing the best advice and guidance on government operations to establishments in a fully automated manner, which helps them make the best decisions and move towards success.</p>
+          <p class="text-lg	text-slate-500 px-10 leading-[44px]">تطمح إلمام أن تكون الشريك التقني للمنشآت في المملكة وذلك من خلال تقديم أفضل النصائح والإرشادات في العمليات الحكومية للمنشآت بشكل مؤتمت بالكامل مما يساعدها على اتخاذ أفضل القرارات والتقدم نحو النجاح.</p>
         </div>
         <div class="lg:w-[548px] lg:h-80 rounded-xl" style="box-shadow: 0px 67.114px 109.061px 0px rgba(0, 0, 0, 0.05);">
           <div class="flex justify-center mb-8">
-            <img src="imges/mission.svg" alt="" class="mr-8">
-            <h4 class="mt-auto mb-auto font-bold text-3xl">the goal</h4>
+            <img src="imges/mission.svg" alt="" class="ltr:mr-8 rtl:ml-8">
+            <h4 class="mt-auto mb-auto font-bold text-3xl">الهدف</h4>
           </div>
-          <p class="text-lg	text-slate-500 px-10 leading-[44px]">Elmam aims to help establishments and their employees in the field of government operations and human resources discover errors and observations in government operations, resolve them, and enable officials to make sound decisions to make the establishment.</p>
+          <p class="text-lg	text-slate-500 px-10 leading-[44px]">تهدف إلمام الى مساعدة المنشآت وموظفيها في مجال العمليات الحكومية والموارد البشرية باكتشاف الأخطاء والملاحظات في العمليات الحكومية وحلها وتمكين المسؤولين من اتخاذ القرارات السليمة لجعل المنشأة في حال أفضل مما هي عليه.</p>
         </div>
       </div>
     </section>
     <section class="mt-60">
       <div>
         <div class="mb-16">
-          <h2 class="flex justify-center text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">The importance of the imam</h2>
-          <h3 class="flex justify-center text-2xl	font-bold">Some of the risks you can avoid by using Elmam</h3>
+          <h2 class="flex justify-center text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">أهمية إلمام</h2>
+          <h3 class="flex justify-center text-2xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
         </div>
         <div class="flex justify-center gap-20 mx-20">
           <div class="w-[442px] border-2 border-slate-200 px-10 py-7 rounded-xl	">
             <div class="flex justify-start mb-8">
-              <img src="imges/money-4.svg" alt="" class="mr-8">
-              <h4 class="mt-auto mb-auto font-bold text-3xl">Financial risks</h4>
+              <img src="imges/money-4.svg" alt="" class="ltr:mr-8 rtl:ml-8">
+              <h4 class="mt-auto mb-auto font-bold text-3xl">مخاطر مالية</h4>
             </div> 
             <p class="text-lg	text-slate-500 px-10">
-- Avoid financial waste due to lack of knowledge 
-  of some government procedures
+              - تجنب الهدر المالي بسبب عدم معرفة بعض الإجراءات الحكومية
   <br>
-- Avoid violations that occur as a result of the 
-  large number of government operations and their 
-  interconnectedness</p>           
+  - تجنب مخالفات تحدث نتيجة كثرة العمليات الحكومية وترابطها</p>           
           </div>
           <div class="w-[442px] border-2 border-slate-200 px-10 py-7 rounded-xl	">
             <div class="flex justify-start mb-8">
-              <img src="imges/phone.svg" alt="" class="mr-8">
-              <h4 class="mt-auto mb-auto font-bold text-3xl">Systemic risk</h4>
+              <img src="imges/phone.svg" alt="" class="ltr:mr-8 rtl:ml-8">
+              <h4 class="mt-auto mb-auto font-bold text-3xl">مخاطر نظامية</h4>
             </div> 
             <p class="text-lg	text-slate-500 px-10">
-- Avoid problems resulting from fake localization
+              - تجنب المشاكل الناتجة عن التوطين الوهمي
 <br>
-- Avoid not benefiting from government support 
-  for the facility</p>           
+- تجنب عدم الاستفادة من الدعم الحكومي للمنشأة</p>           
           </div>
           <div class="w-[442px] border-2 border-slate-200 px-10 py-7 rounded-xl	">
             <div class="flex justify-start mb-8">
-              <img src="imges/computer.svg" alt="" class="mr-8">
-              <h4 class="mt-auto mb-auto font-bold text-3xl">Management risks</h4>
+              <img src="imges/computer.svg" alt="" class="ltr:mr-8 rtl:ml-8">
+              <h4 class="mt-auto mb-auto font-bold text-3xl">مخاطر إدارية</h4>
             </div> 
             <p class="text-lg	text-slate-500 px-10">
-- Avoid the inability of those responsible
-  for government operations to lead 
-  the facility
+              - تجنب عدم قدرة المسؤولين عن العمليات الحكومية على قيادة المنشأة
   <br>
-- Avoid the lack of a clear vision for 
-  executive management to make 
-  sound decisions</p>           
+  - تجنب عدم وجود تصور واضح للإدارة التنفيذية لاتخاذ القرارات السليمة</p>           
           </div>
         </div>
       </div>
