add images section

--- a/main.html
+++ b/main.html
@@ -136,14 +136,14 @@
           </div>
         </div>
       </div>
-      <div>
+      <div class="flex">
         <img src="imges/Group.svg" alt="">
-        <img src="imges/dashboard.svg" alt="">
-        <img src="imges/reports.svg" alt="">
+        <img src="imges/dashboard.svg" alt="" class="absolute left-[-66px]">
+        <img src="imges/reports.svg" alt="" class="absolute mt-[630px] mr-[75px]" >
+      <div class="relative top-[1040px] right-[425px]">
+        <h5 class="mb-10">يمكنك الأن معرفة حالة منشأتك</h5>
+        <button class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 w-28 h-11 rounded-[10px] flex justify-center min-w-28 lg:w-max m-auto">انشاء تقارير</button>
       </div>
-      <div>
-        <h5></h5>
-        <button></button>
       </div>
     </section>
 
