--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
       <script src="confing.js"></script>
       <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"  rel="stylesheet" />
 </head>
-<body class="font-normal	">
+<body class="font-normal overflow-x-hidden">
     <header>
     <nav class="bg-white border-gray-200 lg:px-6 dark:bg-gray-800 p-5">
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
@@ -138,7 +138,7 @@
       </div>
       <div class="flex">
         <img src="imges/Group.svg" alt="">
-        <img src="imges/dashboard.svg" alt="" class="absolute left-[-66px]">
+        <img src="imges/dashboard.svg" alt="" class="absolute left-0">
         <img src="imges/reports.svg" alt="" class="absolute mt-[630px] mr-[75px]" >
       <div class="relative top-[1040px] right-[425px]">
         <h5 class="mb-10">يمكنك الأن معرفة حالة منشأتك</h5>
@@ -146,7 +146,57 @@
       </div>
       </div>
     </section>
-
+    <section class="relative mx-auto px-4 sm:px-6 bg-sky-500">
+      <div class="py-12 md:py-20">
+          <div class="max-w-3xl mx-auto text-center pb-12 md:pb-20">
+            <h2 class="flex justify-center text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-white">أهمية إلمام</h2>
+            <h3 class="flex justify-center text-2xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
+          </div>
+          <div class="max-w-sm mx-auto grid gap-6 grid-cols-2 lg:grid-cols-4 items-start md:max-w-2xl lg:max-w-none font-bold">
+              <!-- Card 1 -->
+              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">1</div>
+                  <p class="text-center">تحسين نطاق المنشأة والمؤثرات عليه بأسهل الحلول وأقل التكاليف</p>
+              </div>
+              <!-- Card 2 -->
+              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+                <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">2</div>
+                  <p class="text-center">توافق المنشأة مع لوائح وبرامج توطين المهن</p>
+              </div>
+              <!-- Card 3 -->
+              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+                <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">3</div>
+                  <p class="text-center">نسب الجنسيات في المنشأة ومدى قدرتها على الاستقطاب</p>
+              </div>
+              <!-- Card 4 -->
+              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+                <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">4</div>
+                  <p class="text-center">كيفية حل المشكلات المانعة لخدمات نقل الكفالة والتأشيرات</p>
+              </div>
+              <!-- Card 5 -->
+              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+                <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">5</div>
+                  <p class="text-center">التنبيهات عن حالة دعم صندوق الموارد البشرية والمستحقين له</p>
+              </div>
+              <!-- Card 6 -->
+              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+                <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">6</div>
+                  <p class="text-center">بناء التصور المستقبلي لحالة المنشأة ومساعدة اصحاب القرار</p>
+              </div>
+              <!-- Card 7 -->
+              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+                <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">7</div>
+                  <p class="text-center">مساعدة الإدارة المالية لقياس تكلفة أثر المشكلات الكامنة</p>
+              </div>
+              <!-- Card 8 -->
+              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+                <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">8</div>
+                  <p class="text-center"> معرفة كفاءة موظفي أقسام العمليات الحكومية وتوجيههم</p>
+              </div>
+          </div>
+      </div>
+  </section>
+  
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
 </body>
